[package]
name = "mcalc"
version = "0.1.0"
edition = "2021"
authors = ["Brendan Leber <n0bml@brendanleber.com>"]
description = "Calculate the dimensions for a Moxon Rectangle antenna."
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
